# ChangeLog for dev-perl/CDDB
# Copyright 2000-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/CDDB/ChangeLog,v 1.25 2009/01/30 11:28:49 tove Exp $

  30 Jan 2009; Torsten Veller <tove@gentoo.org> metadata.xml,
  -CDDB-1.16.ebuild, CDDB-1.17.ebuild:
  Cleanup

  05 Mar 2007; Andrej Kacian <ticho@gentoo.org> CDDB-1.17.ebuild:
  Stable on x86, bug #169152.

  14 Jan 2007; Michael Cummings <mcummings@gentoo.org> CDDB-1.16.ebuild,
  CDDB-1.17.ebuild:
  Ebuild maintenance

  16 Sep 2006; Tobias Scherbaum <dertobi123@gentoo.org> CDDB-1.17.ebuild:
  ppc stable

  07 Sep 2006; Michael Cummings <mcummings@gentoo.org> -CDDB-1.12.ebuild,
  -CDDB-1.15.ebuild:
  Cleaning out old ebuilds

  06 Aug 2006; Michael Cummings <mcummings@gentoo.org> CDDB-1.17.ebuild:
  Marking amd64 stable

  04 Aug 2006; Michael Cummings <mcummings@gentoo.org> CDDB-1.12.ebuild,
  CDDB-1.15.ebuild, CDDB-1.16.ebuild, CDDB-1.17.ebuild:
  Adding perl dep; fixed header; fixed DEPEND

  10 Jul 2006; Aron Griffis <agriffis@gentoo.org> CDDB-1.17.ebuild:
  Mark 1.17 stable on ia64

  11 Jun 2006; Michael Cummings <mcummings@gentoo.org> CDDB-1.17.ebuild:
  Marking stable sparc

*CDDB-1.17 (24 Apr 2006)

  24 Apr 2006; <mcummings@gentoo.org> +CDDB-1.17.ebuild:
  Version bump

  30 Mar 2006; Aron Griffis <agriffis@gentoo.org> CDDB-1.16.ebuild:
  Mark 1.16 ~ia64

  06 Feb 2006; Simon Stelling <blubb@gentoo.org> CDDB-1.16.ebuild:
  stable on amd64

  16 Jan 2006; Gustavo Zacarias <gustavoz@gentoo.org> CDDB-1.16.ebuild:
  Stable on sparc

  15 Jan 2006; Michael Hanselmann <hansmi@gentoo.org> CDDB-1.16.ebuild:
  Stable on ppc.

  13 Jan 2006; Michael Cummings <mcummings@gentoo.org> CDDB-1.16.ebuild:
  Marking stable x86

*CDDB-1.16 (09 Nov 2005)

  09 Nov 2005; <mcumming@gentoo.org> +CDDB-1.16.ebuild:
  New version on cpan, bug 111933

*CDDB-1.15 (24 Apr 2005)

  24 Apr 2005; Michael Cummings <mcummings@gentoo.org> CDDB-1.12.ebuild,
  +CDDB-1.15.ebuild: