@@ -1,0 +1,16 @@
+# Copyright 1999-2009 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/CDDB/CDDB-1.21.ebuild,v 1.1 2009/08/02 18:38:26 tove Exp $
+
+EAPI=2
+
+MODULE_AUTHOR=RCAPUTO
+inherit perl-module
+
+DESCRIPTION="high-level interface to cddb/freedb protocol"
+
+SLOT="0"
+KEYWORDS="~amd64 ~ia64 ~ppc ~sparc ~x86"
+IUSE=""
+
+SRC_TEST=no
