@@ -1,6 +1,11 @@
 # ChangeLog for dev-perl/Text-CSV
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Text-CSV/ChangeLog,v 1.19 2009/06/03 15:22:18 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Text-CSV/ChangeLog,v 1.20 2009/08/02 18:35:59 tove Exp $
+
+*Text-CSV-1.13 (02 Aug 2009)
+
+  02 Aug 2009; Torsten Veller <tove@gentoo.org> +Text-CSV-1.13.ebuild:
+  Version bump
 
   03 Jun 2009; Torsten Veller <tove@gentoo.org> -Text-CSV-1.11.ebuild:
   Cleanup
