@@ -1,6 +1,11 @@
 # ChangeLog for dev-perl/CDDB
-# Copyright 2000-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/CDDB/ChangeLog,v 1.25 2009/01/30 11:28:49 tove Exp $
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/CDDB/ChangeLog,v 1.26 2009/08/02 18:38:26 tove Exp $
+
+*CDDB-1.21 (02 Aug 2009)
+
+  02 Aug 2009; Torsten Veller <tove@gentoo.org> +CDDB-1.21.ebuild:
+  Version bump
 
   30 Jan 2009; Torsten Veller <tove@gentoo.org> metadata.xml,
   -CDDB-1.16.ebuild, CDDB-1.17.ebuild:
